#17 - Implement Input component
* Implement Input component with label, error, required, disabled
* Implement onChange and onBlur functionality
* Implement readOnly and icon
* Implement tests
* fix hardcoding of roles

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -13,6 +13,7 @@
 
 p {
   margin: 0;
+  font-weight: 100;
 }
 html {
   font-size: $defaultFontSize;
@@ -43,4 +44,10 @@ nav ul {
 
 table {
   border-collapse: collapse;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
 }
