Revert "Resolves #12 - buttons"

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,8 +9,8 @@ $blue8: #0050b3;
 $blue9: #003a8c;
 $blue10: #002766;
 
-$green: #389e0d;
-$red: #cf1322;
+$green: #52c41a;
+$red: #ff4d4f;
 $yellow: #fadb14;
 
 $gray1: #ffffff;
@@ -86,18 +86,14 @@ $lineHeight8: 46px;
 $lineHeight9: 54px;
 $lineHeight10: 64px;
 $lineHeight1: 76px;
+
 $defaultLineHeight: $lineHeight4;
+
 $defaultFontSize: $fontSize4;
 
-$brandColor: $blue7;
 $defaultLabelFontSize: $fontSize3;
 $defaultLabelLineHeight: $lineHeight3;
 $defaultLabelColor: $gray9;
-
-$defaultButtonFontSize: $fontSize4;
-$defaultButtonLineHeight: $lineHeight4;
-$defaultButtonPadding: 0.6em 2em;
-$defaultButtonRadius: 10px;
 
 $maxPhoneWidth: 767px;
 
