#18: Implement dropdown component
* Add tests for dropdown component
* Implement Dropdown component  with required, disabled, loading,

--- a/src/components/inputs/Input.scss
+++ b/src/components/inputs/Input.scss
@@ -12,7 +12,7 @@
     line-height: $defaultLineHeight;
     border-radius: $defaultBorderRadius;
     background: $white;
-    padding: $spacing1;
+    padding: $spacing1 $spacing2;
 
     > input {
       font-weight: 400;
