--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,39 @@ $blue8: #0050b3;
 $blue9: #003a8c;
 $blue10: #002766;
 
+$red1: #fff1f0;
+$red2: #ffccc7;
+$red3: #ffa39e;
+$red4: #ff7875;
+$red5: #ff4d4f;
+$red6: #f5222d;
+$red7: #cf1322;
+$red8: #a8071a;
+$red9: #820014;
+$red10: #5c0011;
+
+$green1: #f6ffed;
+$green2: #d9f7be;
+$green3: #b7eb8f;
+$green4: #95de64;
+$green5: #73d13d;
+$green6: #52c41a;
+$green7: #389e0d;
+$green8: #237804;
+$green9: #135200;
+$green10: #092b00;
+
+$yellow1: #feffe6;
+$yellow2: #ffffb8;
+$yellow3: #fffb8f;
+$yellow4: #fff566;
+$yellow5: #ffec3d;
+$yellow6: #fadb14;
+$yellow7: #d4b106;
+$yellow8: #ad8b00;
+$yellow9: #876800;
+$yellow10: #614700;
+
 $green: #389e0d;
 $red: #cf1322;
 $yellow: #fadb14;
